bm.from_object has parameters which don't work #47784

Closed
opened 2016-03-13 20:40:24 +01:00 by Jacques Lucke · 6 comments
Member

System Information
Windows 10 64 bit
Nivida Quadro 600

Blender Version
Broken: 1776ad5

Short description of error
Changing the deform or render parameter for this function has no influence on the result:
https://www.blender.org/api/blender_python_api_2_77_0/bmesh.types.html#bmesh.types.BMesh.from_object

Exact steps for others to reproduce the error
Open the .blend file, execute the script and look into the terminal. Both vectors should be different if everything is correct. Also both bmesh objects should use render deformation, which I turned off in the modifier stack. The modifier is used anyway.

bmesh bug.blend

bmesh bug.PNG

**System Information** Windows 10 64 bit Nivida Quadro 600 **Blender Version** Broken: 1776ad5 **Short description of error** Changing the **deform** or **render** parameter for this function has no influence on the result: https://www.blender.org/api/blender_python_api_2_77_0/bmesh.types.html#bmesh.types.BMesh.from_object **Exact steps for others to reproduce the error** Open the .blend file, execute the script and look into the terminal. Both vectors should be different if everything is correct. Also both bmesh objects should use render deformation, which I turned off in the modifier stack. The modifier is used anyway. [bmesh bug.blend](https://archive.blender.org/developer/F289928/bmesh_bug.blend) ![bmesh bug.PNG](https://archive.blender.org/developer/F289927/bmesh_bug.PNG)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke

Added subscriber: @sindra1961

Added subscriber: @sindra1961

I think that you should carry out the script of this file.
Sorry, my bad english.
A_bmesh bug.blend

I think that you should carry out the script of this file. Sorry, my bad english. [A_bmesh bug.blend](https://archive.blender.org/developer/F290445/A_bmesh_bug.blend)
Campbell Barton self-assigned this 2016-03-14 14:27:45 +01:00

This issue was referenced by 2a9bc888d0

This issue was referenced by 2a9bc888d0b5dfbea12ccd5024d6d90770aaa396

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47784
No description provided.